--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-# PYTHON 3.12 COMPATIBLE VERSIONS - FORCE NEW BUILD
+# PYTHON 3.12 COMPATIBLE VERSIONS - FINAL BUILD
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
 pymysql==1.1.0
 cryptography==41.0.7
 pydantic==2.0.3
-pydantic-core==2.3.1
 pydantic-settings==2.0.3
 python-dotenv==1.0.0
 python-multipart==0.0.6
