--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,7 @@ python-multipart==0.0.6
 passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
 alembic==1.12.1
+twilio==8.2.2
+sendgrid==6.10.0
+google-auth==2.23.4
+requests==2.31.0
