--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 sqlalchemy>=2.0.35
-pymysql==1.1.0
+psycopg2-binary==2.9.9
 cryptography==41.0.7
 pydantic==2.9.2
 pydantic-settings==2.6.1
